# akkadian

./: .gitignore  main.py  pyproject.toml  requirements.txt
src/: preprocessing.ipynb
