[project]
name = "akkadian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.6.1",
    "evaluate>=0.4.6",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "kaggle>=2.0.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "sacrebleu>=2.6.0",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "transformers[torch]>=5.2.0",
]

[tool.uv.workspace]
members = [
    "akkadian",
]
